Premier test d'intégration dans hiptest, réalisation du tuto, en vue d'appliquer la mécanique a notre intégration.

--- a/python-unittest.conf
+++ b/python-unittest.conf
@@ -1,3 +1,4 @@
+token = 28583750340130774512551845142411696694374483349060491020
 site  = 'https://hiptest.net'
 language = 'python'
 output_directory = './src/tests'
